fix: se agrega clase text-truncate para titulo

--- a/src/scss/components/_cards.scss
+++ b/src/scss/components/_cards.scss
@@ -190,6 +190,16 @@ $accordion-bg-white: $white;
     @extend .h4;
   }
 
+  .text-truncate {
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    line-clamp: 3;
+    -webkit-box-orient: vertical;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: wrap;
+  }
+
   //.card-subtitle deprecado. Eliminar mas adelante
   .card-subtitle {
     font-size: $card-subtitle-font-size;
